@@ -2,6 +2,8 @@ Revision history for Perl distribution Class-Data-Inheritable-Translucent
 
 1.05 Development
 
+    - Added optional Changes testing (skipped unless AUTHOR_TESTING).
+
     - Reformatted Changes file as per CPAN::Changes::Spec.
 
     - Made Perl Critic, Pod and Pod Coverage tests skip unless AUTHOR_TESTING.
